fixed text overlapping, adjusted hover animation

--- a/react-slideshow/src/App.css
+++ b/react-slideshow/src/App.css
@@ -1,5 +1,4 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   text-align: center;
 }
@@ -99,7 +98,7 @@ button:active {
 .ghibliCat {
   width: 60px;
   position: absolute;
-  right: 650px;
+  right: 66%;
   top: 107px;
   transition: transform 0.3s ease-in-out infinite;
 }
@@ -111,7 +110,7 @@ button:active {
 .ghibliKaonashi {
   width: 55px;
   position: absolute;
-  right: 270px;
+  right: 28%;
   top: 107px;
   transition: transform 0.3s ease-in-out infinite;
 }
@@ -124,17 +123,18 @@ button:active {
   0% {
     transform: translateY(0);
   }
-  15% {
+  20% {
     transform: translateY(-10px) scale(125%);
   }
-  20% {
-    display: none;
+  30% {
+    opacity: 30%;
   }
   40% {
     transform: translateY(60px);
+    opacity: 0;
   }
   100% {
-
+    opacity: 0;
   }
 }
 
@@ -162,25 +162,31 @@ button:active {
 .infoBox {
   border: 1px solid white;
   padding: 10px;
-  width: 80%;
+  width: 90%;
   display: flex;
-  border-radius: 5%;
+  border-radius: 30px;
 }
 
 .imgBox {
-  width: 20%;
+  width: 30%; 
+  justify-content: center;
+  align-items: center;
+  margin-top: .5%;
+  margin-left: .4%;
 }
 
 .filmImg {
-  width: 200px;
-  border-radius: 6%;
+  width: 100%;
+  border-radius: 25px;
 }
 
 .detailBox {
-  width: 80%;
+  width: 69%;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding: 5px;
+  margin-left: 1%;
 }
 
 .filmJapanese {
@@ -200,6 +206,7 @@ button:active {
   font-family: "Avant Garde" sans-serif;
   margin-bottom: 20px;
   line-height: 1;
+  width: 100%;
 }
 
 .buttonBox {
